Kubernetes/order-service.yml
# Detail order service
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: order-service
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
      version: v1
  template:
    metadata:
      labels:
        app: order-service
        version: v1
    spec:
      containers:
      - name: orders
        image:  ghcr.io/faridfirdautama/order-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
      # initContainers:
      # - name: rabbitmq
      #   image: rabbitmq:3.11-management
        # command: ['sh', '-c', "sleep 10"]
